samples/_failures_safe/1761341815_065912_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_304c8d28.c: In function ‘main’:
./samples/SAFE/__tmp_304c8d28.c:198:5: error: expected declaration or statement at end of input
  198 |     }
      |     ^
